Add some constants to avoid duplication
Signed-off-by: Thibault Meyer <meyer.thibault@gmail.com>